--- a/src/content/blog/mock-mongo-go-driver.mdx
+++ b/src/content/blog/mock-mongo-go-driver.mdx
@@ -33,7 +33,7 @@ Let's get started!
 
 ## The basics
 
-The mock feature is available in the go.[mongodb.org/mongo-driver/mongo/integration/mtest](mongodb.org/mongo-driver/mongo/integration/mtest) package.
+The mock feature is available in the [go.mongodb.org/mongo-driver/v2/internal/integration/mtest](https://github.com/mongodb/mongo-go-driver/tree/bb6856753c29383fb308cf33ce61e049c145fa7d/internal/integration/mtest) package.
 
 First of all, you need to create the mongo test instance:
 
